k8s/traefik/traefik-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 30101
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30103
  selector:
    backend: traefik
