k8s/traefik/traefik-admin.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`trf.ethcode.dev`) && PathPrefix(`/`)
        kind: Rule
        priority: 1
        services:
        - name: traefik-admin
        port: 8080
