k8s/traefik/traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
  - match: Host(`trf.ethco.de`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
