k8s/traefik/traefik-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`trf.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik
      port: 80
