k8s/traefik/traefik-ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - rt-port
    - rd-port
    - cc-port
  routes:
  - match: Host(`rt.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: remix-tests-api-cluster-ip-svc
      port: 50051
      scheme: h2c
  - match: Host(`rd.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: remix-debug-cluster-ip-svc
      port: 50052
      scheme: h2c
  - match: Host(`cc.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: client-call-cluster-ip-svc
      port: 50053
      scheme: h2c
